--- a/spot/theme/Galerie.html
+++ b/spot/theme/Galerie.html
@@ -48,6 +48,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About</a></li>
 	    <li class="active"><a href="Galerie.html">Galerie</a></li>
+	    <li><a href="Blog.html">Blog</a></li>
 	    <li><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -63,7 +64,7 @@
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
-	</div><!-- headerwrap -->
+	</div><!-- headerwrapGalerie -->
 
 	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
 	<div id="blueimp-gallery" data-use-bootstrap-modal="false" class="blueimp-gallery blueimp-gallery-controls">
@@ -75,7 +76,7 @@
 	    <a class="play-pause"></a>
 	    <ol class="indicator"></ol>
 	</div>
-
+	
 	<div id="links">
 
 	    <a href="assets/img/Ballons2.jpg" title="We love Ballons">
@@ -84,9 +85,17 @@
 	    <a href="assets/img/magicPaul2.jpg" title="Why so serious?">
 		<img src="assets/img/magicPaul2_preview.jpg" alt="Why so serious?">
 	    </a>
-	    <a href="assets/img/floatingcigarette.jpg" title="Why so serious?">
-		<img src="assets/img/floatingcigarette_preview.jpg" alt="Why so serious?">
+	    <a href="assets/img/floatingcigarette.jpg" title="What is that?">
+		<img src="assets/img/floatingcigarette_preview.jpg" alt="What is that?">
 	    </a>
+	</div>
+	
+	<div class="container w">
+		<div class="row centered">
+			<div class="col-lg-8 col-lg-offset-2">
+				<br><br> <!--photo-->
+			</div>
+		</div>
 	</div>
 
 	<div id="r">
@@ -99,7 +108,7 @@
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
-	</div><! -- r wrap -->
+	</div><!-- r wrap -->
 
 
 	<!-- FOOTER -->
