--- a/spot/theme/Contact.html
+++ b/spot/theme/Contact.html
@@ -47,6 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">About</a></li>
 	    <li><a href="Galerie.html">Galerie</a></li>
+	    <li><a href="Blog.html">Blog</a></li>
 	    <li class="active"><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -66,23 +67,48 @@
 
 	<div class="container w">
 			<div class="row centered">
-			<br><br>
 			<div class="col-lg-4">
+				<h1><b>Ils m'ont fait confiance</h1><br><br>
+				<a href="#"><img src="assets\img\logo Partenaire\Ensi.png" hspace="65" >
+				<a href="#"><img src="assets\img\logo Partenaire\SupOptique.png">
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets\img\logo Partenaire\Centrale.png" hspace="35">
+				<a href="#"><img src="assets\img\logo Partenaire\INSA.png">	
+			</div><br>
+				<a href="#"><img src="assets\img\logo Partenaire\AeM.png" hspace="65">			
+				<a href="#"><img src="assets\img\logo Partenaire\RS.png">
+			<div class="col-lg-4"><br>
+				<a href="#"><img src="assets\img\logo Partenaire\LP4Y.png" hspace="65">
+				<a href="#"><img src="assets\img\logo Partenaire\UPMF.png"><br><br>
+				<h1> Pourquoi pas vous?</b></h1>
+			</div>					
+
+
+		<!-- TYPEFORM Change the width and height values to suit you best -->
+		<div class="typeform-widget" data-url="https://paulocaillau.typeform.com/to/rGwNMk" data-text="Abracadabra" style="width:100%;height:500px;"></div>
+		<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+		    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=rGwNMk&amp;utm_source=typeform.com-1374830-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=FR" style="color: #999" target="_blank">Typeform</a></div>
+		<!-- END OF TYPEFORM -->
+
+
+			<!--div class="col-lg-4">
+			<div class="row centered">
 				<i class="fa fa-envelope"></i>
 				<h4>email me</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
-				<a data-toggle="modal" data_target="#register" href="mailto:paulocaillau@gmail.com?subject=email%20de%20notre%	20site" class="btn btn-info">send an email</a>
+				<a data-toggle="modal" data_target="#register" href="mailto:paulocaillau@gmail.com?subject=email%20de%20notre%	20site" class="btn btn-info">send an email</a><br><br>
 			</div><!-- col-lg-5 -->
 
-			<div class="col-lg-4">
+			<!--div class="col-lg-4">
 				<i class="fa fa-pencil"></i>
 				<h4>book me</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
 				<a data-toggle="modal" data_target="#register" href="#register" class="btn btn-success">Devis</a>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
-		<br>
-		<br>
+		</div>
+		
 	</div><!-- container -->
 
 	<div id="r">
@@ -180,6 +206,7 @@
           </div>
         </div>
       </div>
+
       <div class="form-group">
         <label class="col-sm-3 control-label" for="card-holder-name">Remarques</label>
         <div class="col-sm-8">
