--- a/spot/theme/about.html
+++ b/spot/theme/about.html
@@ -44,7 +44,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="about.html">About</a></li>
 	    <li><a href="Galerie.html">Galerie</a></li>
-	     <li><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>	
+  	    <li><a href="Blog.html">Blog</a></li>
+	    <li><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>	
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -204,35 +205,6 @@
 		</div><!-- container -->
 	</div><!-- Footer -->
 
-
-	<!-- MODAL FOR CONTACT -->
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="myModalLabel">contact us</h4>
-	      </div>
-	      <div class="modal-body">
-		        <div class="row centered">
-		        	<p>Contactez-moi pour plus de renseignements </p>
-		        	<p>
-		        		paulocaillau@gmail.com<br/>
-						+49 4 176 88 147 147<br/>
-						+33 6 59 51 04 16
-		        	</p>
-		        	<div id="mapwrap">
-		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
-					</div>	
-		        </div>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-danger" data-dismiss="modal">Save & Go</button>
-	      </div>
-	    </div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
 
 
     <!-- Bootstrap core JavaScript
