--- a/spot/theme/Contact.html
+++ b/spot/theme/Contact.html
@@ -35,229 +35,232 @@
     <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="test.html">M<i class="fa fa-circle"></i>GIC</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
+	<div class="navbar-header">
+	  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	  </button>
+	  <a class="navbar-brand" href="test.html">M<i class="fa fa-circle"></i>GIC</a>
+	</div>
+	<div class="navbar-collapse collapse">
+	  <ul class="nav navbar-nav navbar-right">
+	    <li><a href="about.html">About</a></li>
 	    <li><a href="Galerie.html">Galerie</a></li>
 	    <li><a href="Blog.html">Blog</a></li>
 	    <li class="active"><a href="Contact.html"><i class="fa fa-envelope-o"></i></a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+	  </ul>
+	</div><!--/.nav-collapse -->
       </div>
     </div>
 
-	<div id="headerwrapContact">
-		<div class="container">
-			<div class="row right">
-				<div class="col-lg-5">
-				<h2>There is no trick</h2>
-				<h1>Magic is an <b>Art</b></h1>
-				</div>
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- headerwrap -->
+    <div id="headerwrapContact">
+      <div class="container">
+	<div class="row right">
+	  <div class="col-lg-5">
+	    <h2>There is no trick</h2>
+	    <h1>Magic is an <b>Art</b></h1>
+	  </div>
+	</div><!-- row -->
+      </div><!-- container -->
+    </div><!-- headerwrap -->
 
-	<div class="container w">
-			<div class="row centered">
-			<div class="col-lg-4">
-				<h1><b>Ils m'ont fait confiance</h1><br><br>
-				<a href="#"><img src="assets\img\logo Partenaire\Ensi.png" hspace="65" >
-				<a href="#"><img src="assets\img\logo Partenaire\SupOptique.png">
+    <div class="container w">
+      <div class="row centered">
+	<div class="col-lg-4">
+	  <h1><b>Ils m'ont fait confiance</h1><br><br>
+	    <a href="#"><img src="assets\img\logo Partenaire\Ensi.png" hspace="65" >
+	      <a href="#"><img src="assets\img\logo Partenaire\SupOptique.png">
+	</div>
+	      <div class="col-lg-4">
+		<a href="#"><img src="assets\img\logo Partenaire\Centrale.png" hspace="35">
+		  <a href="#"><img src="assets\img\logo Partenaire\INSA.png">
+	      </div><br>
+	      <a href="#"><img src="assets\img\logo Partenaire\AeM.png" hspace="65">
+		<a href="#"><img src="assets\img\logo Partenaire\RS.png">
+		  <div class="col-lg-4"><br>
+		    <a href="#"><img src="assets\img\logo Partenaire\LP4Y.png" hspace="65">
+		      <a href="#"><img src="assets\img\logo Partenaire\UPMF.png"><br><br>
+			<h1> Pourquoi pas vous?</b></h1>
+		  </div>
+
+
+		  <!-- TYPEFORM Change the width and height values to suit you best -->
+		  <div class="typeform-widget" data-url="https://paulocaillau.typeform.com/to/rGwNMk" data-text="Abracadabra" style="width:100%;height:500px;clear:both;"></div>
+		  <!-- END OF TYPEFORM -->
+
+
+		  <!--div class="col-lg-4">
+      <div class="row centered">
+      <i class="fa fa-envelope"></i>
+      <h4>email me</h4>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
+      <a data-toggle="modal" data_target="#register" href="mailto:paulocaillau@gmail.com?subject=email%20de%20notre%	20site" class="btn btn-info">send an email</a><br><br>
+      </div><!-- col-lg-5 -->
+
+      <!--div class="col-lg-4">
+	<i class="fa fa-pencil"></i>
+	<h4>book me</h4>
+	<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
+	<a data-toggle="modal" data_target="#register" href="#register" class="btn btn-success">Devis</a>
+	</div><!-- col-lg-4 -->
+    </div><!-- row -->
+    </div>
+
+    </div><!-- container -->
+
+    <div id="r">
+      <div class="container">
+	<div class="row centered">
+	  <div class="col-lg-8 col-lg-offset-2">
+	    <h4>TRICKS ARE WHAT YOU SEE. MAGIC IS WHAT YOU FEEL.</h4>
+	    <p>Magic is not about fooling you, it is about making you witness the impossible.<br>
+	    I believe magic can change a life. </p>
+	  </div>
+	</div><!-- row -->
+      </div><!-- container -->
+    </div><!--r wrap -->
+
+
+    <!-- FOOTER -->
+    <div id="f">
+      <div class="container">
+	<div class="row centered">
+	  <a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
+
+	</div><!-- row -->
+      </div><!-- container -->
+    </div><!-- Footer -->
+
+
+    <!-- MODAL FOR ARTIST REGISTRATION-->
+
+    <div class="modal fade" id="register" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+	<div class="modal-content">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	    <h4 class="modal-title" id="modalTitle">Demander un devis</h4>
+	  </div>
+	  <div class="modal-body">
+	    <div class="row centered">
+
+	      <form class="form-horizontal" role="form">
+
+		<fieldset>
+
+		  <legend>Information</legend>
+		  <div class="form-group">
+		    <label class="col-sm-3 control-label">Prénom</label>
+		    <div class="col-sm-8">
+		      <input type="text" class="form-control" placeholder="your first name">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label class="col-sm-3 control-label">Noms</label>
+		    <div class="col-sm-8">
+		      <input type="text" class="form-control" placeholder="your last name">
+		    </div>
+		  </div>
+		  <legend>Evènement</legend>
+
+		  <div class="form-group">
+		    <label class="col-sm-3 control-label" for="card-holder-name">Date</label>
+		    <div class="col-sm-8">
+		      <div class="input-group date view-calendar" data-provide="datepicker">
+			<input type="text" class="form-control">
+			<div class="input-group-addon">
+			  <span class="glyphicon glyphicon-th"></span>
 			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets\img\logo Partenaire\Centrale.png" hspace="35">
-				<a href="#"><img src="assets\img\logo Partenaire\INSA.png">	
-			</div><br>
-				<a href="#"><img src="assets\img\logo Partenaire\AeM.png" hspace="65">			
-				<a href="#"><img src="assets\img\logo Partenaire\RS.png">
-			<div class="col-lg-4"><br>
-				<a href="#"><img src="assets\img\logo Partenaire\LP4Y.png" hspace="65">
-				<a href="#"><img src="assets\img\logo Partenaire\UPMF.png"><br><br>
-				<h1> Pourquoi pas vous?</b></h1>
-			</div>					
+		      </div>
 
+		    </div>
+		  </div>
 
-		<!-- TYPEFORM Change the width and height values to suit you best -->
-		<div class="typeform-widget" data-url="https://paulocaillau.typeform.com/to/rGwNMk" data-text="Abracadabra" style="width:100%;height:500px;"></div>
-		<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-		    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=rGwNMk&amp;utm_source=typeform.com-1374830-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=FR" style="color: #999" target="_blank">Typeform</a></div>
-		<!-- END OF TYPEFORM -->
+		  <!-- <div class="input-group date"> -->
+		  <!-- <input data-provide="datepicker" class="form-control" type="text" value="12-02-2012"> -->
+		  <!-- <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div> -->
+		  <!-- </div> -->
 
+		  <div class="form-group">
+		    <label class="col-sm-3 control-label" for="expiry-month">Evènement</label>
+		    <div class="col-sm-8">
+		      <div class="row">
+			<div class="col-xs-8">
+			  <select class="form-control col-sm-2" name="expiry-month" id="expiry-month">
+			    <option>choisir</option>
+			    <option value="01">Gala</option>
+			    <option value="02">Marriage</option>
+			    <option value="03">Anniversaire enfant</option>
+			    <option value="04">Anniversaire adulte</option>
+			    <option value="05">Animation caritative</option>
+			    <option value="06">Evènement d'entreprise</option>
+			    <option value="07">Soirée privée</option>
+			    <option value="08">Arbre de Noël</option>
+			    <option value="08">Repas de prestige</option>
+			    <option value="09">Autre</option>
+			  </select>
+			</div>
+		      </div>
+		    </div>
+		  </div>
 
-			<!--div class="col-lg-4">
-			<div class="row centered">
-				<i class="fa fa-envelope"></i>
-				<h4>email me</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
-				<a data-toggle="modal" data_target="#register" href="mailto:paulocaillau@gmail.com?subject=email%20de%20notre%	20site" class="btn btn-info">send an email</a><br><br>
-			</div><!-- col-lg-5 -->
-
-			<!--div class="col-lg-4">
-				<i class="fa fa-pencil"></i>
-				<h4>book me</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
-				<a data-toggle="modal" data_target="#register" href="#register" class="btn btn-success">Devis</a>
-			</div><!-- col-lg-4 -->
-		</div><!-- row -->
-		</div>
-		
-	</div><!-- container -->
-
-	<div id="r">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-8 col-lg-offset-2">
-					<h4>TRICKS ARE WHAT YOU SEE. MAGIC IS WHAT YOU FEEL.</h4>
-					<p>Magic is not about fooling you, it is about making you witness the impossible.<br>
-						I believe magic can change a life. </p>
-				</div>
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!--r wrap -->
-
-
-	<!-- FOOTER -->
-	<div id="f">
-		<div class="container">
-			<div class="row centered">
-				<a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- Footer -->
-
-
-	<!-- MODAL FOR ARTIST REGISTRATION-->
-
-        <div class="modal fade" id="register" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="modalTitle">Demander un devis</h4>
-	      </div>
-	      <div class="modal-body">
-		        <div class="row centered">
-
-  <form class="form-horizontal" role="form">
-
-    <fieldset>
-
-       <legend>Information</legend>
-      <div class="form-group">
-        <label class="col-sm-3 control-label">Prénom</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" placeholder="your first name">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label">Noms</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" placeholder="your last name">
-        </div>
-      </div>
-      <legend>Evènement</legend>
-
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-holder-name">Date</label>
-        <div class="col-sm-8">
-	  <div class="input-group date view-calendar" data-provide="datepicker">
-	    <input type="text" class="form-control">
-	    <div class="input-group-addon">
-	      <span class="glyphicon glyphicon-th"></span>
+		  <div class="form-group">
+		    <label class="col-sm-3 control-label" for="card-holder-name">Remarques</label>
+		    <div class="col-sm-8">
+		      <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Autre">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <div class="col-sm-offset-4 col-sm-9">
+		      <button type="button" class="btn btn-success">Demander le devis</button>
+		    </div>
+		  </div>
+		</fieldset>
+	      </form>
 	    </div>
 	  </div>
+	</div>
 
-        </div>
-      </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
-      <!-- <div class="input-group date"> -->
-	<!-- <input data-provide="datepicker" class="form-control" type="text" value="12-02-2012"> -->
-	<!-- <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div> -->
-      <!-- </div> -->
-
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="expiry-month">Evènement</label>
-        <div class="col-sm-8">
-          <div class="row">
-            <div class="col-xs-8">
-              <select class="form-control col-sm-2" name="expiry-month" id="expiry-month">
-                <option>choisir</option>
-                <option value="01">Gala</option>
-                <option value="02">Marriage</option>
-                <option value="03">Anniversaire enfant</option>
-                <option value="04">Anniversaire adulte</option>
-                <option value="05">Animation caritative</option>
-                <option value="06">Evènement d'entreprise</option>
-                <option value="07">Soirée privée</option>
-                <option value="08">Arbre de Noël</option>
-		<option value="08">Repas de prestige</option>
-                <option value="09">Autre</option>
-              </select>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-holder-name">Remarques</label>
-        <div class="col-sm-8">
-          <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Autre">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-4 col-sm-9">
-          <button type="button" class="btn btn-success">Demander le devis</button>
-        </div>
-      </div>
-    </fieldset>
-  </form>
-</div>
-		        </div>
-	      </div>
-
-	    </div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
-
-<!-- End of MODAL-->
+    <!-- End of MODAL-->
 
 
     <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/blueimp-gallery.min.js"></script>
-    <script src="assets/js/bootstrap-datepicker.min.js"></script>
+      ================================================== -->
+      <!-- Placed at the end of the document so the pages load faster -->
+      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+      <script src="assets/js/bootstrap.min.js"></script>
+      <script src="assets/js/blueimp-gallery.min.js"></script>
+      <script src="assets/js/bootstrap-datepicker.min.js"></script>
 
 
-		<script>
-	<!-- document.getElementById('links').onclick = function (event) { -->
-	<!--     event = event || window.event; -->
-	<!--     var target = event.target || event.srcElement, -->
-	<!-- 	link = target.src ? target.parentNode : target, -->
-	<!-- 	options = {index: link, event: event}, -->
-	<!-- 	links = this.getElementsByTagName('a'); -->
-	<!--     blueimp.Gallery(links, options); -->
-	<!-- }; -->
-	</script>
+      <script>
+<!-- document.getElementById('links').onclick = function (event) { -->
+  <!--     event = event || window.event; -->
+    <!--     var target = event.target || event.srcElement, -->
+    <!-- 	link = target.src ? target.parentNode : target, -->
+    <!-- 	options = {index: link, event: event}, -->
+    <!-- 	links = this.getElementsByTagName('a'); -->
+    <!--     blueimp.Gallery(links, options); -->
+    <!-- }; -->
+      </script>
 
-	<script>
-	$( document ).ready(function() {
-	  $('.view-calendar').datepicker({ format: "yyyy-mm-dd" }).on('changeDate', function(ev){
-	    $(this).datepicker('hide');
-	  });
-	});
-	</script>
+      <script>
+$( document ).ready(function() {
+  $('.view-calendar').datepicker({ format: "yyyy-mm-dd" }).on('changeDate', function(ev){
+    $(this).datepicker('hide');
+  });
+});
+      </script>
+
+      <!-- Typeform Script -->
+      <script>
+(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()
+      </script>
 
   </body>
 </html>
