--- a/spot/theme/Contact.html
+++ b/spot/theme/Contact.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <link rel="stylesheet" href="assets/css/blueimp-gallery.min.css">
 
     <title>MAGIC - Paul Caillau</title>
 
@@ -104,6 +102,7 @@
 	<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 					by injected humour, or randomised words which don't look even believable.</p>
 	<a data-toggle="modal" data_target="#register" href="#register" class="btn btn-success">Devis</a>
 	</div><!-- col-lg-4 -->
+
     </div><!-- row -->
     </div>
 
@@ -224,7 +223,7 @@
 
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+    </div--><!-- /.modal -->
 
     <!-- End of MODAL-->
 
@@ -234,20 +233,8 @@
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="assets/js/bootstrap.min.js"></script>
-      <script src="assets/js/blueimp-gallery.min.js"></script>
       <script src="assets/js/bootstrap-datepicker.min.js"></script>
 
-
-      <script>
-<!-- document.getElementById('links').onclick = function (event) { -->
-  <!--     event = event || window.event; -->
-    <!--     var target = event.target || event.srcElement, -->
-    <!-- 	link = target.src ? target.parentNode : target, -->
-    <!-- 	options = {index: link, event: event}, -->
-    <!-- 	links = this.getElementsByTagName('a'); -->
-    <!--     blueimp.Gallery(links, options); -->
-    <!-- }; -->
-      </script>
 
       <script>
 $( document ).ready(function() {
