--- a/spot/theme/Galerie.html
+++ b/spot/theme/Galerie.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
     <link rel="stylesheet" href="assets/css/blueimp-gallery.min.css">
 
     <title>MAGIC - Paul Caillau</title>
@@ -65,6 +64,7 @@
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrapGalerie -->
+	<br>
 
 	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
 	<div id="blueimp-gallery" data-use-bootstrap-modal="false" class="blueimp-gallery blueimp-gallery-controls">
@@ -77,26 +77,38 @@
 	    <ol class="indicator"></ol>
 	</div>
 	
-	<div id="links">
-
-	    <a href="assets/img/Ballons2.jpg" title="We love Ballons">
-		<img src="assets/img/Ballons2_preview.jpg" alt="We love Ballons">
-	    </a>
-	    <a href="assets/img/magicPaul2.jpg" title="Why so serious?">
-		<img src="assets/img/magicPaul2_preview.jpg" alt="Why so serious?">
-	    </a>
-	    <a href="assets/img/floatingcigarette.jpg" title="What is that?">
-		<img src="assets/img/floatingcigarette_preview.jpg" alt="What is that?">
-	    </a>
-	</div>
+	
 	
 	<div class="container w">
 		<div class="row centered">
-			<div class="col-lg-8 col-lg-offset-2">
-				<br><br> <!--photo-->
-			</div>
+			<div class="col-lg-12 ">
+				<div id="links">
+
+	    <a href="assets/img/WebImage/Ballons2.jpg" title="We love Ballons">
+		<img src="assets/img/WebImage/Ballons2_preview.jpg" alt="We love Ballons">
+	    </a>
+	    <a href="assets/img/WebImage/magicPaul2.jpg" title="Why so serious?">
+		<img src="assets/img/WebImage/magicPaul2_preview.jpg" alt="Why so serious?">
+	    </a>
+	    <a href="assets/img/WebImage/floatingcigarette.jpg" title="What is that?">
+		<img src="assets/img/WebImage/floatingcigarette_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/fauteuils.jpg" title="What is that?">
+		<img src="assets/img/WebImage/fauteuils_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/magicPaul.jpg" title="What is that?">
+		<img src="assets/img/WebImage/magicPaul_preview.jpg" alt="What is that?">
+	    </a>
+	    <a href="assets/img/WebImage/magicPaul3.jpg" title="What is that?">
+		<img src="assets/img/WebImage/magicPaul3_preview.jpg" alt="What is that?">
+	    </a>
+				
+			</div> 
 		</div>
 	</div>
+
+	</div><!-- Gallery -->
+	<br><br>
 
 	<div id="r">
 		<div class="container">
