--- a/spot/theme/about.html
+++ b/spot/theme/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>SPOT - Free Bootstrap 3 Theme</title>
 
@@ -213,4 +212,4 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
-</html>h
+</html>
