--- a/spot/theme/test.html
+++ b/spot/theme/test.html
@@ -64,16 +64,17 @@
 		</div><!-- container -->
 	</div><!-- headerwrap -->
 	<br><br>
-	<div class="row centered col-lg-10 col-lg-offset-1">
+	<div class="row centered col-lg-8">
 	<h1 id="quote">"Magical and beautiful quote that change every time you refresh the page"</h1> <h2 id="quote-author">Paul C.</h2>
 	</div>
 	<div class="container w">
-		<div class="row left-centered col-lg-10 col-lg-offset-1">
+	
+		<div class="row justify col-lg-8 col-lg-offset-2">
 			<br><br>
-		<h4>Magic as a passion</h4>
-		<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some			form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+		<h4>Bienvenue à vous!</h4>
+		<p>Vous êtes un fan de magie? un curieux? vous recherchez LE magicien qui saura faire de votre événement un moment inoubliable? Je vous rassure vous êtes au bon endroit car ce site est fait pour vous. Si vous m'avez déjà rencontré lors d'une de mes prestations vous êtes peut-être en photo dans la galerie (sous votre meilleur profil bien sûr). Si vous ne m'avez jamais vu ce site est l'occasion pour moi de me présenter à vous et de vous donner une première impression. Qui sait vous êtes peut-être curieux d'en savoir plus sur moi ou de me contacter directement? Dans tous les cas, n'hésitez pas à naviguer sur le site comme bon vous semble, vous y trouverez quelquechose d'intéressant j'en suis persuadé. </p>
 		</div>
-
+	</div></div>
 		</div><!-- row -->
 
 
